tests/NormalTests/paczka1/small_fuzzy/89279495.err
Error in line 1: 0PYOn A89Y Y0,6
Error in line 11: wWYY40WJBaeA91937,4
Error in line 4: wWYY40WJBae A919 13,3
Error in line 12: wWYY40WJBae S695 88,6
